fix alignment and wrapper for chronicle page

--- a/private/src/styles/pages/article/_header.scss
+++ b/private/src/styles/pages/article/_header.scss
@@ -28,54 +28,62 @@
 }
 
 .article-header {
-  .yoast-breadcrumb {
-    padding: 16px 0 10px 24px;
-    color: var(--wp--preset--color--grey-dark);
-    max-width: $container-hg;
-    margin: 0 auto;
+  .yoast-breadcrumb-wrapper {
+    width: 100%;
 
-    @media (min-width: 1440px) {
-      padding-left: 0;
-    }
-
-    > span:first-of-type {
-      display: flex;
-      align-items: center;
-    }
-
-    span::before {
-      vertical-align: middle;
-    }
-
-    span + span::before {
-      content: '';
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      margin: 0 6px;
-      background: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8.78132 7.99999L5.48132 4.69999L6.42399 3.75732L10.6667 7.99999L6.42399 12.2427L5.48132 11.3L8.78132 7.99999Z' fill='%23575756'/%3E%3C/svg%3E")
-        no-repeat center;
-      background-size: contain;
-    }
-
-    a {
-      font-size: 13px;
-      font-weight: 300;
-      text-decoration: none;
+    .yoast-breadcrumb {
+      padding: 16px 0 10px 24px;
       color: var(--wp--preset--color--grey-dark);
+      max-width: $container-hg;
+      margin: 0 auto;
 
-      &:hover {
-        text-decoration: underline;
-        background-color: transparent;
+      @media (min-width: 1440px) {
+        padding-left: 0;
       }
-    }
 
-    & .breadcrumb_last {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 13px;
-      font-weight: bold;
+      > span:first-of-type {
+        display: flex;
+        align-items: center;
+
+        > span {
+          display: inline-flex;
+          align-items: center;
+        }
+      }
+
+      span::before {
+        vertical-align: middle;
+      }
+
+      span + span::before {
+        content: '';
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin: 0 6px;
+        background: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8.78132 7.99999L5.48132 4.69999L6.42399 3.75732L10.6667 7.99999L6.42399 12.2427L5.48132 11.3L8.78132 7.99999Z' fill='%23575756'/%3E%3C/svg%3E")
+          no-repeat center;
+        background-size: contain;
+      }
+
+      a {
+        font-size: 13px;
+        font-weight: 300;
+        text-decoration: none;
+        color: var(--wp--preset--color--grey-dark);
+
+        &:hover {
+          text-decoration: underline;
+          background-color: transparent;
+        }
+      }
+
+      & .breadcrumb_last {
+        display: inline;
+        align-items: center;
+        font-size: 13px;
+        font-weight: bold;
+      }
     }
   }
 }
